--- a/client/main.css
+++ b/client/main.css
@@ -519,32 +519,21 @@ li.notification {
 
     }
     .actividad-nombre{
-        font-family: Tahoma, Verdana, Segoe, sans-serif;
-        font-size: 49px;
+        font-family:  'Montserrat';
+        font-weight: 700;
+        font-size: 72px;
+        line-height:69px;
         font-style: normal;
-        font-variant: normal;
-        font-weight: bold;
-        line-height: 53.9px;
+        text-transform: uppercase;
+        margin:0px;
         color:white;
-        position:absolute;
-        width:40vw;
-        display:block;
-        margin-bottom:50px;
+        text-align:center;/*margin-right:40px;*/
 
         /*margin-right:40px;*/
     }
     .actividad-descripcion{
-        margin-top:50px;
-        font-family: Tahoma, Verdana, Segoe, sans-serif;
-        font-size: 20px;
-        font-style: normal;
-        font-variant: normal;
-        font-weight: bold;
-        line-height: 53.9px;
+        font-family: 'Open Sans', sans-serif;
         color:white;
-        position:absolute;
-        display:block;
-        width:450px;
     }
     #txtlzr
     {
@@ -754,6 +743,7 @@ li.notification {
 }
 
 .caratula{
+
     height:1000px;
     /*margin-bottom:-5px;*/
     width:100%;
@@ -776,9 +766,9 @@ li.notification {
     background-image: url('layer0top.png');
     position: fixed;
     background-position: center top;
-    background-size: 110%;
+    background-size: auto;
     background-repeat: no-repeat;
-    width: 100%;height: 1000px;
+    width: 110%;height: 1000px;
 }
 
 .layer-1{
@@ -807,6 +797,8 @@ li.notification {
     background-image: url('letrasTransición.png');
     position: fixed;
     background-position: bottom center;
+    background-size: auto;
+    background-repeat: no-repeat;
     width: 100%;
     height:550px
 }
@@ -817,7 +809,9 @@ li.notification {
     position: fixed;
     background-position: bottom center;
     width: 100%;
-    height:550px
+    height:550px;
+    background-size: auto;
+    background-repeat: no-repeat;
 }
 
 .layer-letras-tipita{
@@ -830,6 +824,11 @@ li.notification {
     background-repeat: no-repeat;
     width: 95%;
     height: 1000px;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 
 .layer-tipita{
@@ -837,7 +836,7 @@ li.notification {
     margin-left:30px;
     background-image: url('tipita.png');
     position: fixed;
-    background-position: bottom left;
+    background-position: bottom center;
     background-size: auto;
     background-repeat: no-repeat;
     width: 50%;
@@ -848,7 +847,7 @@ li.notification {
     margin-top:1335px;
     margin-left:30px;
     position: fixed;
-    background-position: bottom left;
+    background-position: bottom;
 }
 
 .unite-a-container{
