--- a/client/main.css
+++ b/client/main.css
@@ -1154,3 +1154,16 @@ body, html {
 .impar-right{
     height:400px;padding:0;margin-top:150px;
 }
+.upload-area .alert {
+    position: relative;
+}
+
+.upload-area input[type="file"] {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    width: 100%;
+    opacity: 0;
+}
