--- a/client/main.css
+++ b/client/main.css
@@ -1167,3 +1167,21 @@ body, html {
     width: 100%;
     opacity: 0;
 }
+
+#nav {
+    width: 100%;
+    float: left;
+    padding: 0;
+     }
+#nav ul {
+    list-style: none;
+    width: 800px;
+    margin: 0 auto;
+    padding: 0; }
+#nav li {
+    float: left; }
+#nav li a {
+    display: block;
+    padding: 8px 15px;
+}
+
