added new designs

--- a/client/main.css
+++ b/client/main.css
@@ -1209,3 +1209,11 @@ body, html {
     padding: 8px 15px;
 }
 
+.letritas-container {
+    background-color:#2d3e54;
+    position: fixed;width:100%;
+    top:0px;
+    left:0px;
+    z-index:-1;
+    padding-top:200px
+}
