--- a/client/main.css
+++ b/client/main.css
@@ -1217,3 +1217,8 @@ body, html {
     z-index:-1;
     padding-top:200px
 }
+
+.logo-button :hover {
+    background-color:#0e131a;
+    border-radius: 10%;
+}
