working on movile

--- a/client/main.css
+++ b/client/main.css
@@ -556,6 +556,7 @@ li.notification {
     .actividad-descripcion{
         font-family: 'Open Sans', sans-serif;
         color:white;
+        font-size:47px;
     }
     #txtlzr
     {
