working on movile

--- a/client/main.css
+++ b/client/main.css
@@ -318,8 +318,8 @@ li.notification {
         font-size:50px;
     }
     .horizontal-menu-item-2 {
-       font-size:47px;
-       margin:20px;
+       font-size:4vh;
+       margin:1vh;
     }
 }
 
