--- a/client/main.css
+++ b/client/main.css
@@ -1227,3 +1227,17 @@ body, html {
     background-color:#0e131a;
     border-radius: 10%;
 }
+
+.turnDeviceNotification {
+    position:fixed;
+    top: 0;
+    left:0;
+    height:100%;
+    width:100%;
+    display: none;
+    z-index:100;
+}
+.turnDeviceNotification {
+    background-image:url('/turnDevice.png');
+    background-size:cover;
+}
